--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "types:fetch": "bun --preload dotenv/config scripts/fetch-types.ts",
+    "dev": "bun run types:fetch && next dev",
+    "build": "bun run types:fetch && next build",
+    "start": "bun run types:fetch && next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
+    "@elysiajs/eden": "^1.4.8",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.5",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
@@ -28,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "elysia": "^1.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
