--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "types:fetch": "bun --preload dotenv/config scripts/fetch-types.ts",
     "dev": "bun run types:fetch && next dev",
-    "build": "bun run types:fetch && next build",
+    "build": "next build",
     "start": "bun run types:fetch && next start",
     "lint": "eslint"
   },
