--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lorenzopant/tmdb": "^1.1.1",
     "@vercel/speed-insights": "^1.3.1",
     "better-auth": "^1.4.18",
+    "better-fetch": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
