--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
+    "motion": "^12.34.3",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
