--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,27 +3,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    ports:
-      - "3001:3001"
+    network_mode: host
     volumes:
-      # Mount source code for hot reloading
       - .:/app
-      # Prevent overwriting node_modules in container
       - /app/node_modules
-      # Persist Next.js cache
       - .next:/app/.next
     environment:
       - NODE_ENV=development
       - PORT=3001
       - HOSTNAME=0.0.0.0
-      # Pass through environment variables from .env file
       - NEXT_PUBLIC_TMDB_API_KEY
       - NEXT_PUBLIC_TMDB_API_READ_ACCESS_TOKEN
-      - NEXT_PUBLIC_BACKEND_URL=http://host.docker.internal:3000
+      - NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
       - NEXT_PUBLIC_FRONTEND_URL=http://localhost:3001
-    extra_hosts:
-      # Allow container to access host machine's localhost
-      - "host.docker.internal:host-gateway"
-    restart: unless-stopped
     stdin_open: true
     tty: true
