--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-rc.0",
     "@base-ui/react": "^1.1.0",
     "@elysiajs/eden": "^1.4.8",
     "@hugeicons/core-free-icons": "^3.1.1",
