--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
+    "lucide-react": "^0.575.0",
     "motion": "^12.34.3",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
