--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@elysiajs/eden": "^1.4.8",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.5",
+    "@tanstack/query-sync-storage-persister": "^5.90.22",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-persist-client": "^5.90.22",
     "@vercel/speed-insights": "^1.3.1",
     "better-auth": "^1.4.18",
     "better-fetch": "^1.1.2",
